2012-12-25  Ales Cepek  <cepek@gnu.org>

	* added Chinese translation in GBK encoding (switch "zh")
	by 项维 (Vim Xiang) <vimxiang@gmail.com>

2012-11-24  Ales Cepek  <cepek@gnu.org>

	* class Gkf2sql (used in gama-local-gkf2sl) updated to be a general
	export class and renamed to LocalNetword2sql

2012-09-10  Ales Cepek  <cepek@gnu.org>

	* added basic test suite for gama-local (make check)

2012-09-07  Ales Cepek  <cepek@gnu.org>

	* new release 1.13

2012-09-07  Ales Cepek  <cepekgnu.org>

	* removed matvec constructors with variable number of parameters
	(direct initializaion of Mat / Vec elements).

2012-09-06  Ales Cepek  <cepek@gnu.org>

	* Fixed templates lookup name syntax errors reported by Brandon
	Invergo <brandon@invergo.net> (detected by compiler g++-4.7).
	Many thanks for your patch, Brandon.

2012-08-11  Ales Cepek  <cepek@gnu.org>

	* In gama-local suppressed output of running results during
	linearization iterations

	* added doxygen documentation into statan.h, removed forgotten
	Czech comments from statan.cpp

2012-08-10  Ales Cepek  <cepek@gnu.org>

	* Fixed a bug reported by Jacques Beilin <jacques.beilin@ensg.eu>

	Function NormalDistribution ended in an endless loop for high
	values of input argument x.

diff --git a/lib/gnu_gama/statan.cpp b/lib/gnu_gama/statan.cpp
index 4da4a3b..bc2255c 100644
--- a/lib/gnu_gama/statan.cpp
+++ b/lib/gnu_gama/statan.cpp
@@ -21,7 +21,7 @@

 #include <gnu_gama/statan.h>
 #include <gnu_gama/radian.h>
-
+#include <cfloat>

 using namespace std;

@@ -211,7 +211,10 @@ void NormalDistribution(double x, double& D, double& f)
       D = p2/q2;
       if (!typv)
          D = 1 - D;
-      } while ( (r-D) != 0 || (s-D) != 0);
+   } while (std::abs(r - D) > DBL_EPSILON);
+
+   if (s - D) return;
+   if (typv) D = 0; else D = 1;
 }

 // Kolmogorov-Smirnov probability function


2012-07-26  Ales Cepek  <cepek@gnu.org>

	* Fixed a bug reported by Anton Horpynich <anton@vingeo.com>
