@@ -1,3 +1,8 @@
+2013-05-30  Tomas Kubin <tomas.kubin@fsv.cvut.cz>
+
+	* a posteriori standard deviation Chi-Square test is newly always
+	performed in gama-local. The patch sent by Tomas Kubin.
+
 2012-12-25  Ales Cepek  <cepek@gnu.org>
 
 	* added Chinese translation in GBK encoding (switch "zh")
